# zephyr

samples/hello_world/: CMakeLists.txt  prj.conf
samples/hello_world/include/: foo.h
samples/hello_world/src/: foo.c  main.c
